style.css
/* ... */
/* Block: Shared Nesting Alignment Resets ---- */

[class*="__inner-container"] .wp-block-group:not(.alignfull):not(.alignwide):not(.alignleft):not(.alignright),
[class*="__inner-container"] .wp-block-cover:not(.alignfull):not(.alignwide):not(.alignleft):not(.alignright) {
	margin-left: auto;
	margin-right: auto;
	max-width: 58rem;
}


/* Block: Shared Widget Styles --------------- */

.wp-block-archives,
.wp-block-categories,
.wp-block-latest-posts,
.wp-block-latest-comments {
	list-style: none;
	margin-left: 0;
}

.wp-block-archives ul,
.wp-block-categories ul,
.wp-block-latest-posts ul,
.wp-block-latest-comments ul {
	list-style: none;
}

.entry-content .wp-block-archives > li,
.entry-content .wp-block-categories > li,
.entry-content .wp-block-latest-posts > li,
.entry-content .wp-block-latest-comment > li {
	margin-left: 0;
}

.entry-content .wp-block-archives > li:last-child,
.entry-content .wp-block-categories > li:last-child,
.entry-content .wp-block-latest-posts > li:last-child,
.entry-content .wp-block-latest-comment > li:last-child {
	margin-bottom: 0;
}

.entry-content .wp-block-archives *,
.entry-content .wp-block-categories *,
.entry-content .wp-block-latest-posts *,
.entry-content .wp-block-latest-comments * {
	font-family: inherit;
}

.entry-content .wp-block-archives li,
.entry-content .wp-block-categories li,
.entry-content .wp-block-latest-posts li {
	color: #6d6d6d;
}

.wp-block-archives a,
.wp-block-categories a,
.wp-block-latest-posts a,
.wp-block-latest-comments a {
	font-weight: 700;
	text-decoration: none;
}

.wp-block-archives a:hover,
.wp-block-categories a:hover,
.wp-block-latest-posts a:hover,
.wp-block-latest-comments a:hover,
.wp-block-archives a:focus,
.wp-block-categories a:focus,
.wp-block-latest-posts a:focus,
.wp-block-latest-comments a:focus {
	text-decoration: underline;
}

.wp-block-latest-posts a,
.wp-block-latest-comments__comment-meta {
	font-weight: 700;
	letter-spacing: -0.025em;
	line-height: 1.25;
}

.wp-block-latest-comments__comment-date,
.wp-block-latest-posts__post-date {
	color: #6d6d6d;
	font-size: 0.7em;
	font-weight: 600;
	letter-spacing: normal;
	margin-top: 0.15em;
}


/* Block: Shared Media Styles ---------------- */

.wp-block-embed figcaption,
.wp-block-image figcaption {
	color: #6d6d6d;
	font-size: 1.4rem;
	margin-bottom: 0;
	margin-top: 1.5rem;
}

/* Block: Audio ------------------------------ */

.wp-block-audio audio {
	width: 100%;
}

/* Block: Button ----------------------------- */

.wp-block-button {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.wp-block-button.is-style-outline {
	color: #0071e3;
}

.is-style-outline .wp-block-button__link:not(.has-text-color) {
	color: inherit;
}

.is-style-outline .wp-block-button__link {
	padding: calc(1.1em - 0.2rem) calc(1.44em - 0.2rem);
}

/* Block: Columns ---------------------------- */

.wp-block-columns.alignfull,
.alignfull:not(.has-background) .wp-block-columns {
	padding-left: 2rem;
	padding-right: 2rem;
}

.wp-block-column {
	margin-bottom: 3.2rem;
}

.wp-block-column > *:first-child {
	margin-top: 0;
}

.wp-block-column > *:last-child {
	margin-bottom: 0;
}

/* Block: Cover ------------------------------ */

.wp-block-cover-image .wp-block-cover__inner-container,
.wp-block-cover .wp-block-cover__inner-container {
	width: calc(100% - 4rem);
	padding: 2rem 0;
}

.bb-block-cover,
.bb-block-cover.wp-block-cover {
	align-items: normal; /*	no center alignement inside of flexbox */
	padding-left: 4rem;
	padding-right: 4rem;
}
.bb-block-cover.wp-block-cover .wp-block-buttons {
	right: 6rem;
	bottom: 4rem;
	position: absolute;
	text-align: right;
}
.bb-block-group.wp-block-group .wp-block-group__inner-container h2 {
	margin-bottom: 3rem;
}
.bb-block-cover.wp-block-cover .wp-block-cover__inner-container .wp-block-group.bb-inner-right {
	position: absolute;
	max-width: 25rem;
	right: 7rem;
	top: 7rem
}
.bb-block-cover.wp-block-cover .wp-block-cover__inner-container .wp-block-group.bb-inner-left {
	position: absolute;
	max-width: 55rem;
	left: 10rem;
}

.bb-block-group ul {
	list-style: none;
	margin-left: 0;
}
.bb-block-group ul li {
	background-image: url(https://s3.amazonaws.com/cdn.bottlebooks.me/bottlebooks/img/bottlebooks-dashboard/success-small.svg);
	background-repeat: no-repeat;
	background-position-y: 3px;
	margin-left: 0;
	padding-left: 30px;
	margin-bottom: 20px;
	list-style: none;
}

/*@media (min-width: 1220px) {*/
/*	.entry-content > .bb-block-group.wp-block-group.alignfull,*/
/*	.entry-content > .bb-block-group.wp-block-group.has-background.alignfull {*/
/*		padding-top: 8rem;*/
/*	}*/
/*}*/
@media (min-width: 1000px) {
	.entry-content > .wp-block-group.bb-block-group.alignfull:first-child,
	.entry-content > .bb-block-cover.alignfull:first-child {
		margin-bottom: 0;
		padding-top: 0;
	}
	.entry-content > .wp-block-cover.bb-block-cover.alignfull:not(.has-background){
		margin-top: 0;
	}
}
@media (min-width: 700px) {
	.entry-content > .bb-block-group.wp-block-group.alignfull,
	.entry-content > .bb-block-group.wp-block-group.has-background.alignfull {
		padding-top: 9rem;
		min-height: 600px;
		margin-top: 0;
		margin-bottom: 0;
	}
	.entry-content > .wp-block-group.bb-block-group.alignfull:first-child,
	.entry-content > .bb-block-cover.alignfull:first-child {
		margin-bottom: 0;
		padding-top: 0;
	}
	.entry-content > .wp-block-cover.bb-block-cover.alignfull:not(.has-background),
	.entry-content > .bb-block-cover.alignfull {
		margin-top: 0;
	}
	.bb-block-cover.wp-block-cover .wp-block-cover__inner-container {
		padding-top: 2rem;
	}
	.bb-block-cover.wp-block-cover .wp-block-cover__inner-container h2 {
		font-size: 4.2rem;
	}

	.wp-block-cover-image h2,
	.wp-block-cover .wp-block-cover__inner-container h2 {
		font-size: 3.2rem;
	}
}

.section-inner .post-meta-edit-link-wrapper.post-meta-wrapper {
	display: none;
}
.footer-top-visible .footer-nav-widgets-wrapper.header-footer-group{
	margin-top: -10px;
}
/* ... */

